tests/new_array_type_mismatch.stderr
tests/new_array_type_mismatch.sl:54:57: error: type mismatch
