tests/new_array_type_mismatch.sl
fn foo(ma mut&MemAllocator) {
    var many *i32 = new(&ma, i32, 8)
    _ = many
}
